app/infrastructure/portfolio-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-front-svc
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: devops-lab-gl5
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    name: portfolio-front
    version: 1.0.0
