app/infrastructure/portfolio-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: portfolio-front
spec:
  rules:
  - host: gl5.devops
    http:
      paths:
      - backend:
          service:
            name: portfolio-front-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
